--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -1,13 +1,17 @@
-.app-wrapper {
+.page {
   margin: 0 auto;
   display: grid;
   width: 1200px;
   grid-template-areas:
-  "header header"
-  "nav content";
+    'header header'
+    'nav content';
+    
+  grid-template-rows: 60px 1fr;
+  grid-template-columns: 2fr 10fr;
+  grid-gap: 10px;
+}
 
-   grid-template-rows: 60px 1fr;
-    grid-template-columns: 2fr 10fr;
-    /* grid-gap: 10px; */
-
+.page__content {
+  grid-area: content;
+  background-color: white;
 }
