--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -1,10 +1,28 @@
 .nav {
    grid-area: nav;
    background-color: #0f6177;
+   padding: 0;
 }
+
+.nav__list {
+   list-style: none;
+   margin: 0;
+   padding: 0;
+}
+
 .nav__item {
-   color: black;
+   padding: 10px;
+   font-size: 20px;
+   font-weight: 400;
 }
-.nav__item_active {
+
+.nav__link {
+   color: black;
+   text-decoration: none;
+}
+
+.nav__link_active {
    color: white;
+   font-weight: 500;
+   text-decoration: none;
 }
