--- a/src/components/Messages/Messages.module.css
+++ b/src/components/Messages/Messages.module.css
@@ -1,32 +1,19 @@
-.dialogs {
+.messages {
    display: grid;
    grid-template-columns: 2fr 10fr;
    column-gap: 20px;
 }
 
-.dialogs__items {
+.messages__users {
    padding: 10px;
    font-size: 20px;
    font-weight: 400;
    list-style: none;
 }
 
-.dialogs__item {
-   text-decoration: none;
-   color: black;
-}
-
-.dialogs__item_active {
-   color: #0f6177;
-   font-weight: 500;
-}
-
-.dialogs__messages {
+.messages__dialogs {
    padding: 10px;
    font-size: 20px;
    font-weight: 400;
    list-style: none;
-}
-
-.dialogs__message {
 }
