--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -22,7 +22,8 @@
 }
 
 .nav__link_active {
-   color: white;
+   color: black;
    font-weight: 500;
    text-decoration: none;
+   text-shadow: 1px 1px 4px white, 0 0 1em white, 0 0 0.2em white
 }
