--- a/src/components/Profile/MyPosts/MyPosts.module.css
+++ b/src/components/Profile/MyPosts/MyPosts.module.css
@@ -1,17 +1,65 @@
 .myPosts {
+   padding: 10px;
+}
+
+.myPosts__item {
+   display: flex;
+   flex-direction: column;
+   gap: 10px;
+}
+
+.myPosts__title {
+   font-weight: 700;
+   font-size: 17px;
+   line-height: 16px;
+   padding: 0;
+   margin: 10px 0 10px 0;
 }
 
 .myPosts__input {
+   height: 29px;
+   font-weight: 500;
+   font-size: 13px;
+   line-height: 16px;
+   color: #ffffff;
+   background: #0f6177;
+   border-radius: 5px;
+   border: none;
+   box-sizing: border-box;
+   padding: 5px 5px 2px 10px;
+}
+.myPosts__input:focus {
+   outline: none;
+   box-shadow: 2px 2px 15px #0f6177;
+}
+
+::-webkit-input-placeholder {
+   color: white;
+}
+::-moz-placeholder {
+   color: white;
+} /* Firefox 19+ */
+:-moz-placeholder {
+   color: white;
+} /* Firefox 18- */
+:-ms-input-placeholder {
+   color: white;
 }
 
 .myPosts__button {
+   width: 130px;
+   height: 25px;
+   padding: 2px;
+   margin-bottom: 20px;
+   font-weight: 500;
+   font-size: 14px;
+   line-height: 17px;
+   background: white;
+   text-align: center;
+   border-color: #0f6177;
+   color: black;
+   border-radius: 5px;
+   box-shadow: 2px 2px 10px #0f6177;
+   text-shadow: 1px 1px 4px #0f6177, 0 0 1em #0f6177, 0 0 0.2em #0f6177;
+   cursor: pointer;
 }
-
-.posts {
-   color: #0f6177;
-}
-
-.posts__list {
-   color: #0f6177;
-}
-
