--- a/src/components/Messages/UserItem/UserItem.module.css
+++ b/src/components/Messages/UserItem/UserItem.module.css
@@ -1,3 +1,16 @@
+.user {
+   display: flex;
+   align-items: center;
+   gap: 10px;
+}
+
+.user__avatar {
+   width: 50px;
+   height: 50px;
+   border-radius: 50px;
+   background: blue;
+}
+
 .user__item {
    text-decoration: none;
    color: black;
