--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,7 @@
 body {
-  margin: 0;
-  padding: 0;
-  background-color: #0f6177;
+  width: 100%;
+  min-height: 100vh;
+  margin: 0 auto;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans',
     'Droid Sans', 'Helvetica Neue', sans-serif;
   -webkit-font-smoothing: antialiased;
