--- a/src/components/Users/Users.module.css
+++ b/src/components/Users/Users.module.css
@@ -1,11 +1,3 @@
-.users__avatar {
-   width: 80px;
-   height: 80px;
-   border-radius: 50px;
-   margin: 0;
-   padding: 10px;
-}
-
 .users__items {
    display: flex;
    flex-direction: column;
@@ -21,6 +13,16 @@
    gap: 20px;
    box-shadow: 4px 4px 10px #137995;
 }
+
+.users__avatar {
+   width: 80px;
+   height: 80px;
+   border-radius: 50px;
+   margin: 0;
+   padding: 10px;
+   object-fit: cover;
+}
+
 
 .users__status {
    display: flex;
