--- a/src/components/Users/Users.module.css
+++ b/src/components/Users/Users.module.css
@@ -23,7 +23,6 @@
    object-fit: cover;
 }
 
-
 .users__status {
    display: flex;
    justify-content: center;
@@ -107,4 +106,25 @@
    border: none;
    box-shadow: 2px 2px 10px #137995;
    text-shadow: 1px 1px 4px #137995, 0 0 1em #137995, 0 0 0.2em #137995;
+}
+
+.users__pages {
+   display: flex;
+   gap: 10px;
+   list-style: none;
+   flex-wrap: wrap;
+}
+
+.users__page {
+   display: flex;
+   width: 20px;
+   height: 20px;
+   font-weight: 500;
+   font-size: 17px;
+   line-height: 17px;
+   cursor: pointer;
+}
+
+.users__page_type_current {
+   font-weight: 800;
 }
