--- a/src/components/Users/Users.module.css
+++ b/src/components/Users/Users.module.css
@@ -49,7 +49,7 @@
 .users__container {
    display: flex;
    flex-direction: column;
-   align-items: start;
+   align-items: flex-start;
    gap: 10px;
    width: 150px;
    box-sizing: border-box;
@@ -63,7 +63,6 @@
    font-size: 24px;
    line-height: 17px;
    margin: 0;
-   /* align-self: start; */
 }
 
 .users__country {
